# sysrepo-plugin-example

./: CMakeLists.txt  README.md
CMakeModules/: FindCJSON.cmake  FindLibTSN.cmake  FindLibYANG.cmake
examples/: bridge_config.json  intf_config.json
modules/: ieee802-dot1q-types.yang
scripts/: model-install.sh
src/: config.h.in  ietf-interfaces-plugin.c
